.archive/apps/adminer/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adminer-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Database
    gethomepage.dev/name: Adminer
    gethomepage.dev/href: "https://adminer.home.alden.ai"
    gethomepage.dev/description: Lightweight DB Client
    gethomepage.dev/icon: adminer.svg
    gethomepage.dev/app: adminer # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: app=adminer
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - adminer.home.alden.ai
  rules:
  - backendRefs:
    - name: adminer
      port: 80
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
